# fastapi_learn

./: .dockerignore  .env.example  Dockerfile  compose.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 128ad7d36698_create_users_table.py  16ff5caa37ac_update_todos_table.py  7646df6769c6_update_users_table.py  8ec16ad2aaf5_update_users_table.py  915f3f1ccf8f_create_todos_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
